# dealframe

./: .env.example  .gitignore  Dockerfile  EXPANSION.md  Makefile  Procfile  README.md  claude.md  main.py  nixpacks.toml  planning.md  pyproject.toml  requirements.txt  tasks.md  temporalos_dev.db
.github/workflows/: ci.yml
api/: index.py
config/: settings.yaml
docs/: api-reference.md  architecture.md  deployment.md
evals/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Badge.tsx  CommandPalette.tsx  CorrectionDialog.tsx  DealChat.tsx  DealTimeline.tsx  JobProgress.tsx  Layout.tsx  LiveMic.tsx  SegmentCard.tsx  StatCard.tsx
frontend/src/lib/: attribution.ts
frontend/src/pages/: AuditLog.tsx  Dashboard.tsx  DealCompare.tsx  DealInbox.tsx  Finetuning.tsx  Flywheel.tsx  Integrations.tsx  Intelligence.tsx  LiveCopilot.tsx  LocalPipeline.tsx  Observatory.tsx  Results.tsx  SettingsPage.tsx  SharedDeal.tsx  Upload.tsx  Verticals.tsx
helm/temporalos/: Chart.yaml
scripts/: take_screenshots.js
sdk/: pyproject.toml
temporalos/: __init__.py  cli.py
temporalos/agents/: knowledge_graph.py  qa_agent.py
temporalos/api/: main.py  security.py
temporalos/api/routes/: agents.py  audit.py  chat.py  deals.py  export.py  flywheel.py  intelligence.py  live_copilot.py  observatory.py  process.py  progress.py  search.py  share.py  stream.py  uploads.py  verticals.py
temporalos/audio/: streaming.py
temporalos/batch/: durable_queue.py
temporalos/core/: types.py
temporalos/db/: models.py
temporalos/diarization/: diarizer.py
temporalos/enterprise/: sso.py
temporalos/export/: __init__.py
temporalos/extraction/models/: claude.py  gpt4o.py
temporalos/finetuning/: trainer.py
temporalos/ingestion/: url_downloader.py
temporalos/intelligence/: aggregator.py  clip_reels.py  negotiation.py
temporalos/observability/: event_bus.py  metrics.py
temporalos/observatory/: comparator.py  runner.py
temporalos/schemas/: registry.py
temporalos/storage/: __init__.py
temporalos/summarization/: engine.py
temporalos/verticals/: base.py  customer_success.py  procurement.py  real_estate.py  sales.py  ux_research.py
temporalos/vision/models/: claude_vision.py  gpt4o_vision.py  qwen_vl.py
temporalos_sdk/: __init__.py
tests/e2e/: test_audit_fixes.py  test_negotiation_intelligence.py  test_phase2_observatory.py  test_phase3_intelligence.py  test_phase6_frontend.py  test_procurement_vertical.py
tests/security/: test_tenant_guard.py
tests/unit/: test_aggregator.py  test_comparator.py
