[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "temporalos-sdk"
version = "0.1.0"
description = "Official Python SDK for the DealFrame Video Intelligence API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DealFrame Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []   # zero runtime deps — stdlib only

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]

[project.urls]
Homepage = "https://temporalos.ai"
Repository = "https://github.com/temporalos/temporalos-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["temporalos*"]
